fixed horizontal scroll

--- a/src/app/components/dashboard/welcome/welcome.component.scss
+++ b/src/app/components/dashboard/welcome/welcome.component.scss
@@ -1,3 +1,3 @@
 .welcome {
-  width: calc(100vw - 250px)
+  width: calc(100vw - 250px - 48px - 48px);
 }
